--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/icon-font.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
@@ -24,50 +25,132 @@
             <a href="#" class="btn btn--white btn--animated">Discover out tours</a>
         </div>
     </header>
-    <section class="grid-test">
+    <main>
+        <section class="section-about">
+            
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <h3 class="heading-tertiary u-margin-bottom-small">Lorem ipsum dolor sit amet consectetur, adipisicing
+                            elit. Consequatur
+                            sit cupiditate possimus?
+                        </h3>
+                        <p class="paragraph">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi at explicabo, perferendis
+                            tempore excepturi a accusantium! Quaerat commodi perspiciatis praesentium excepturi amet
+                            asperiores? Totam dolore quos tempora cumque facilis cum?
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Lorem ipsum dolor sit amet consectetur, adipisicing
+                            elit. Consequatur
+                            sit cupiditate possimus?
+                        </h3>
+                        <p class="paragraph">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi at explicabo, perferendis
+                            tempore excepturi a accusantium! Quaerat commodi perspiciatis praesentium excepturi amet
+                            asperiores? Totam dolore quos tempora cumque facilis cum?
+                        </p>
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-6">
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
+          
+        </section>
+        <section class="section-features">
+            <div class="row">
+                <div class="col-3">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary">Explore the word</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa distinctio rem odio architecto illum cumque!
+                        </p>                       
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary">Explore the word</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa distinctio rem odio architecto illum cumque!
+                        </p>                       
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary">Explore the word</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa distinctio rem odio architecto illum cumque!
+                        </p>                       
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary">Explore the word</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa distinctio rem odio architecto illum cumque!
+                        </p>                       
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Most popular tours
+            </h2>
+        </div>
         <div class="row">
-            <div class="col-1-of-2">
-                Col 1 of 2
-            </div>
-            <div class="col-1-of-2">
-                Col 1 of 2
-            </div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--1">
 
-        </div>
-        <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--1">The Sea Explorer</span> 
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>3 day</li>
+                                <li>Up to 30 people</li>
+                                <li>Sleep in cozy hotels</li>
+                                <li>Difficulty: easy</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-1">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">
+                                    Price now
+                                </p>
+                                <p class="card__price-value">297$</p>
+                                <a href="" class="btn btn--white">Book now!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-2-of-3">
-                Col 2 of 3
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-        </div>
+            <div class="col-4">
 
+            </div>
+            <div class="col-4">
+
+            </div>
+        </div>
     </section>
 </body>
 
