--- a/index.html
+++ b/index.html
@@ -138,17 +138,143 @@
                                     Price now
                                 </p>
                                 <p class="card__price-value">297$</p>
-                                <a href="" class="btn btn--white">Book now!</a>
                             </div>
+                                <a href="" class="btn btn--white">Book now!</a>                           
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-4">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--2">
 
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--2">The Forest Explorer</span> 
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>7 day</li>
+                                <li>Up to 30 people</li>
+                                <li>Sleep in cozy hotels</li>
+                                <li>Difficulty: medium</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-2">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">
+                                    Price now
+                                </p>
+                                <p class="card__price-value">397$</p>
+                            </div>
+                                <a href="" class="btn btn--white">Book now!</a>                           
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-4">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--3">
 
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--3">The Snow Adventure</span> 
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>5 day</li>
+                                <li>Up to 30 people</li>
+                                <li>Sleep in cozy hotels</li>
+                                <li>Difficulty: hard</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-3">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">
+                                    Price now
+                                </p>
+                                <p class="card__price-value">597$</p>
+                            </div>
+                                <a href="" class="btn btn--white">Book now!</a>                           
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="u-center-text u-margin-top-big ">
+            <!-- <a href="#" class="btn btn--green">Disvoer all tours</a> -->
+            <a href="#" class="btn btn--green">Discover out tours</a>
+        </div>
+        
+    </section>
+    <section class="section-stories">
+        <div class="bg-video">
+        <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm">
+            Your browser is not supported
+        </video>   
+        </div>
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="Person on tour" class="story__image">
+                        <figcaption class="story__caption">Mary Smith</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia expedita ratione excepturi animi, id aliquam voluptatem similique illum veniam perspiciatis, blanditiis ullam odio, beatae quo! Laudantium expedita quae dolore id. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam nemo harum, vel accusamus aperiam assumenda.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on tour" class="story__image">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Wow my life is completely diffrent now</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia expedita ratione excepturi animi, id aliquam voluptatem similique illum veniam perspiciatis, blanditiis ullam odio, beatae quo! Laudantium expedita quae dolore id. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam nemo harum, vel accusamus aperiam assumenda.</p>
+                        </div>
+                    </div>    
+            </div>
+            <div class="u-center-text u-margin-top-medium">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+           
+            </div>   
+    </section>
+    <section class="section-book">
+        <div class="row">
+            <div class="book">
+                <div class="book__form">
+                    <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                       Start booking now
+                                </h2>
+                            </div>
+                        <div class="form__group">
+                            <input type="text" class="class__input" placeholder="Full Name" id="name" required>
+                            <label for="name" class="form__label">Full Name</label>
+                        </div>
+                        <div class="form__group">
+                            <input type="email" class="class__input" placeholder="Full Name" id="email" required>
+                            <label for="email" class="form__label">Email Address</label>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
