--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </section>
-    </main>
+    
     <section class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
@@ -266,18 +266,81 @@
                                 </h2>
                             </div>
                         <div class="form__group">
-                            <input type="text" class="class__input" placeholder="Full Name" id="name" required>
+                            <input type="text" class="form__input" placeholder="Full Name" id="name" required>
                             <label for="name" class="form__label">Full Name</label>
                         </div>
                         <div class="form__group">
-                            <input type="email" class="class__input" placeholder="Full Name" id="email" required>
+                            <input type="email" class="form__input" placeholder="Full Name" id="email" required>
                             <label for="email" class="form__label">Email Address</label>
+                        </div>
+                        <div class="form__group">
+                            <div class="form__radio-group">
+                                <input id="small" type="radio" class="form__radio-input" name="size" required>
+                                <label for="small" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Small tour group
+                                </label>
+                            </div>
+                    
+                            <div class="form__radio-group">
+                                <input id="large" type="radio" class="form__radio-input" name="size">
+                                <label for="large" class="form__radio-label">
+                                    <span class="form__radio-button">
+
+                                    </span>
+                                    Large tour group
+                                </label>
+                         </div>
+                        </div>
+                        <div class="form__group">
+                             <button class="btn btn--green u-margin-top-medium u-margin-bottom-small">Next step &rarr;</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 footer__logo-box">
+                    <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Company</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Contact us</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Carrers</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Privacy policy</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Terms</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-5 offset-1">
+                    <p class="footer__copyright">
+                        Built by <a href="" class="footer__link">Lorem ipsum.</a>
+                        for Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, dicta error?
+                        <a href="" class="footer__link">Lorem ipsum dolor sit.</a>
+                        Copyright &copy;
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
