--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 </head>
 
 <body>
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkobox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon"></span>
+        </label>
+        <div class="navigation__background"></div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="" class="navigation__link">About</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Benefits</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Tours</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Stories</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Book Now</a></li>
+            </ul>
+        </nav>
+    </div>
     <header class="header">
         <div class="header__logo-box">
             <img class="header__logo" src="img/logo-white.png" alt="logo">
@@ -341,6 +357,13 @@
             </div>
         </div>
     </footer>
+    <!-- <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat" alt="">
+            </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
