--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="heading-primary--main">Outdoors</span>
                 <span class="heading-primary--small">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animated">Discover out tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover out tours</a>
         </div>
     </header>
     <main>
@@ -50,7 +50,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-xl-6">
                         <h3 class="heading-tertiary u-margin-bottom-small">Lorem ipsum dolor sit amet consectetur, adipisicing
                             elit. Consequatur
                             sit cupiditate possimus?
@@ -71,7 +71,7 @@
                         </p>
                         <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-xl-6">
                         <div class="composition">
                             <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
                             <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
@@ -83,7 +83,7 @@
         </section>
         <section class="section-features">
             <div class="row">
-                <div class="col-3">
+                <div class="col-12 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-world"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
@@ -92,7 +92,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-compass"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
@@ -101,7 +101,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-map"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
@@ -110,7 +110,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-12 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-heart"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
@@ -122,14 +122,14 @@
             </div>
         </section>
     
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
                 Most popular tours
             </h2>
         </div>
         <div class="row">
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--1">
@@ -155,12 +155,12 @@
                                 </p>
                                 <p class="card__price-value">297$</p>
                             </div>
-                                <a href="" class="btn btn--white">Book now!</a>                           
+                                <a href="#popup" class="btn btn--white">Book now!</a>                           
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--2">
@@ -186,12 +186,12 @@
                                 </p>
                                 <p class="card__price-value">397$</p>
                             </div>
-                                <a href="" class="btn btn--white">Book now!</a>                           
+                                <a href="#popup" class="btn btn--white">Book now!</a>                           
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-xl-4">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--3">
@@ -217,7 +217,7 @@
                                 </p>
                                 <p class="card__price-value">597$</p>
                             </div>
-                                <a href="" class="btn btn--white">Book now!</a>                           
+                                <a href="#popup" class="btn btn--white">Book now!</a>                           
                         </div>
                     </div>
                 </div>
@@ -272,7 +272,6 @@
             </div>   
     </section>
     <section class="section-book">
-        <div class="row">
             <div class="book">
                 <div class="book__form">
                     <form action="#" class="form">
@@ -313,7 +312,6 @@
                         </div>
                     </form>
                 </div>
-            </div>
         </div>
     </section>
     </main>
@@ -325,7 +323,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-lg-6">
                     <div class="footer__navigation">
                         <ul class="footer__list">
                             <li class="footer__item">
@@ -346,7 +344,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-5 offset-1">
+                <div class="col-12 col-lg-5 offset-lg-1">
                     <p class="footer__copyright">
                         Built by <a href="" class="footer__link">Lorem ipsum.</a>
                         for Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, dicta error?
@@ -357,13 +355,34 @@
             </div>
         </div>
     </footer>
-    <!-- <div class="popup">
+    <div class="popup" id="popup">
         <div class="popup__content">
-            <div class="popup__left">
-                <img src="img/nat" alt="">
+        <div class="row">
+            <div class="popup__left col-12 col-lg-4">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right col-12 col-lg-8">
+                <div class="popup__right-content">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio ipsa tempore inventore dolorum nisi facere neque
+                        nemo, perferendis necessitatibus delectus laudantium veniam obcaecati! Officia sapiente deserunt quidem
+                        similique aspernatur? Amet asperiores incidunt, maiores quisquam numquam cumque tenetur labore deserunt
+                        voluptatibus laudantium esse aut similique saepe, illo, consectetur soluta quaerat eos.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio ipsa tempore inventore dolorum nisi facere neque
+                        nemo, perferendis necessitatibus delectus laudantium veniam obcaecati! Officia sapiente deserunt quidem
+                        similique aspernatur? Amet asperiores incidunt, maiores quisquam numquam cumque tenetur labore deserunt
+                        voluptatibus laudantium esse aut similique saepe, illo, consectetur soluta quaerat eos.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
             </div>
         </div>
-    </div> -->
+        </div>
+    </div>
 </body>
 
 </html>
