--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
         <section class="section-features">
             <div class="row">
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-lg-6 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-world"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
@@ -92,7 +92,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-lg-6 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-compass"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
@@ -101,7 +101,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-lg-6 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-map"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
@@ -110,7 +110,7 @@
                         </p>                       
                     </div>
                 </div>
-                <div class="col-12 col-xl-3">
+                <div class="col-12 col-lg-6 col-xl-3">
                     <div class="feature-box">
                         <i class="feature-box__icon icon-basic-heart"></i>
                         <h3 class="heading-tertiary">Explore the word</h3>
