--- a/index.html
+++ b/index.html
@@ -358,11 +358,11 @@
     <div class="popup" id="popup">
         <div class="popup__content">
         <div class="row">
-            <div class="popup__left col-12 col-lg-4">
+            <div class="popup__left col-12 col-xl-4">
                 <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
                 <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
             </div>
-            <div class="popup__right col-12 col-lg-8">
+            <div class="popup__right col-12 col-xl-8">
                 <div class="popup__right-content">
                     <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
